[package]
name = "workspace"
version = "0.0.0"
edition = "2021"
build = "./build.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[workspace]
members = [
    "dysql-tpl",
    "dysql-tpl-derive",
    "dysql-core",
    "dysql-macro",
    "dysql",
]

[patch.crates-io]
dysql = { path = "./dysql" }
dysql-tpl = { path = "./dysql-tpl" }
dysql-tpl-derive = { path = "./dysql-tpl-derive" }
dysql-core = { path = "./dysql-core" }
dysql-macro = { path = "./dysql-macro" }

[profile.bench]
lto = "fat"
codegen-units = 1
debug = true

[package.metadata.scripts]
test_sqlx = "cargo clean -p dysql-core && cargo test"
flamegraph = "cargo flamegraph --bench bench_ctri_pg -o find-baseline.svg -- --benc"

[dependencies]
env_logger = "0.10"
dotenv = "0.15"
tokio = { version = "1.34", features = ["full"] }
dysql = { path = "./dysql" }
# sql
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "chrono", "uuid" ], optional = true } 
# tokio-postgres family
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }
tokio-pg-mapper = { version = "0.2", optional = true }
tokio-pg-mapper-derive = { version = "0.2", optional = true }
# rbatis family
serde = { version = "1.0", features = ["derive"], optional = true}
rbs = { version = "4.5", optional = true }
rbatis = { version = "4.5", optional = true }
rbdc-pg = {  version = "4.5", optional = true }
rbdc-mysql = { version ="4.5", optional = true }
rbdc-sqlite = { version = "4.5", optional = true }
# rbdc-mssql = { version ="4.5", optional = true }

[dev-dependencies]
askama = "0.12"
handlebars = "4.4"
serde = "1.0"
serde_derive = "1.0"
mustache = "0.9"
tera = "1.2.0"
ahash = "0.8"
criterion = { version = "0.4", features = ["async_tokio"] }

[features]
default = ["sqlx-sqlite"] # "sqlx-postgres", "sqlx-mysql", "tokio-postgres", "rbatis-mysql", "rbatis-sqlite", "rbatis-pg"
sqlx-postgres = ["dysql/sqlx-postgres", "sqlx/postgres"]
sqlx-mysql = ["dysql/sqlx-mysql", "sqlx/mysql"]
sqlx-sqlite = ["dysql/sqlx-sqlite", "sqlx/sqlite"]
tokio-postgres = ["dysql/tokio-postgres", "dep:tokio-postgres", "tokio-pg-mapper", "tokio-pg-mapper-derive"]
rbatis-pg = ["serde", "rbs", "rbatis", "rbdc-pg", "dysql/rbatis-pg"]
rbatis-mysql = ["serde", "rbs", "rbatis", "rbdc-mysql", "dysql/rbatis-mysql"]
rbatis-sqlite = ["serde", "rbs", "rbatis", "rbdc-sqlite", "dysql/rbatis-sqlite"]
# rbatis-mssql = ["serde", "rbs", "rbatis", "rbdc-mssql", "dysql/rbatis-mssql"]

[[test]]
name = "test_sqlx_postgres"
path = "tests/test_sqlx/test_sqlx_pg.rs"
required-features = ["sqlx-postgres"]

[[test]]
name = "test_sqlx_mysql"
path = "tests/test_sqlx/test_sqlx_mysql.rs"
required-features = ["sqlx-mysql"]

[[test]]
name = "test_sqlx_sqlite"
path = "tests/test_sqlx/test_sqlx_sqlite.rs"
required-features = ["sqlx-sqlite"]

[[test]]
name = "test_tokio_pg"
path = "tests/test_tokio_pg/test_tokio_pg.rs"
required-features = ["tokio-postgres"]

[[test]]
name = "test_rbatis_sqlite"
path = "tests/test_rbatis/test_rbatis_sqlite.rs"
required-features = ["rbatis-sqlite"]

[[test]]
name = "test_rbatis_postgres"
path = "tests/test_rbatis/test_rbatis_pg.rs"
required-features = ["rbatis-pg"]

[[test]]
name = "test_rbatis_mysql"
path = "tests/test_rbatis/test_rbatis_mysql.rs"
required-features = ["rbatis-mysql"]

[[test]]
name = "bench_no_harness"
path = "benches/bench_no_harness.rs"
required-features = ["rbatis-sqlite"]

[[bench]]
name = "bench_tpl"
path = "benches/bench_tpl.rs"
harness = true

[[bench]]
name = "bench_ctri"
path = "benches1/bench_ctri.rs"
harness = false

[[bench]]
name = "bench_ctri_sqlite"
path = "benches/bench_ctri_sqlite.rs"
harness = false
