[package]
name = "dysql-core"
version = "2.0.0"
edition = "2021"
description = "Dysql is a rust crate that do dynamic-sql query through proc-macro, it bases on sqlx crate"
license = "GPL-3.0"
repository = "https://github.com/evanzp0/dysql-project"
documentation = "https://docs.rs/dysql-core"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dysql-tpl = { version = "2.0", features = ["chrono", "uuid"] } # path = "../dysql-tpl"
# tokio-postgres family
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"], optional = true }
tokio-pg-mapper = { version = "0.2", optional = true }
tokio-pg-mapper-derive = { version = "0.2", optional = true }
# sqlx
sqlx = { version = "0.7", features = ["uuid", "chrono"], optional = true}
# others
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.13"
home = "0.5"
fnv = "1.0"
serde_json = "1.0"
cargo_metadata = "0.18"
paste = "1"
log = "0.4"
uuid = "1"

[features]
default=[]
sqlx-postgres = ["sqlx/postgres"]
sqlx-mysql = ["sqlx/mysql"]
sqlx-sqlite = ["sqlx/sqlite"]
tokio-postgres = ["dep:tokio-postgres", "tokio-pg-mapper", "tokio-pg-mapper-derive"]
