[package]
name = "dysql-macro"
version = "0.10.0"
edition = "2021"
description = "Dysql is a rust crate that do dynamic-sql query through proc-macro, it bases on sqlx crate"
license = "Apache-2.0"
repository = "https://github.com/evanzp0/dysql-project"
documentation = "https://docs.rs/dysql-macro"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
dysql-core = "0.10"
syn = { version="1.0", features=["extra-traits", "visit-mut"] }
proc-macro2 = { version="1.0", features = ["span-locations"] }
quote = { version="1.0" }
ramhorns-ext = { version = "0.17", features = ["chrono", "uuid"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres",  "mysql", "sqlite", "chrono", "uuid" ] }
