[package]
name = "dysql-macro"
version = "2.0.0"
edition = "2021"
description = "Dysql is a rust crate that do dynamic-sql query through proc-macro, it bases on sqlx crate"
license = "GPL-3.0"
repository = "https://github.com/evanzp0/dysql-project"
documentation = "https://docs.rs/dysql-macro"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
dysql-core = { path = "../dysql-core" } # version = "2.0"
dysql-tpl = { path = "../dysql-tpl" } # version = "2.0",
syn = { version="2.0", features=["extra-traits", "visit-mut"] }
proc-macro2 = { version="1.0", features = ["span-locations"] }
quote = { version="1.0" }
once_cell = "1.13"
dotenv = "0.15"

[features]
default = []
sqlx = []
tokio-postgres = []
rbatis = []

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
