[package]
name = "dysql-tpl-derive"
version = "0.14.0"
authors = ["Evan Zhang <evanzp0@qq.com>"]
license = "GPL-3.0"
edition = "2018"
description = "Experimental Mustache-like templating engine."
repository = "https://github.com/evanzp0/dysql-project"
documentation = "https://docs.rs/dysql-tpl-derive"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
bae = "0.1.7"
fnv = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
