[package]
name = "dysql"
version = "1.0.0"
edition = "2021"
description = "Dysql is a rust crate that do dynamic-sql query through proc-macro, it bases on sqlx crate"
license = "Apache-2.0"
repository = "https://github.com/evanzp0/dysql-project"
documentation = "https://docs.rs/dysql"
readme = "../README.md"

[lib]
name = "dysql"

[dependencies]
dysql-tpl = { version = "0.17", features = ["chrono", "uuid"] }
dysql-core = "1"
dysql-macro = { version = "1", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["sqlx"]
sqlx = ["dysql-macro/sqlx"]
tokio-postgres = ["dysql-macro/tokio-postgres"]