[package]
name = "dysql"
version = "2.0.0"
edition = "2021"
description = "Dysql is a rust crate that do dynamic-sql query through proc-macro, it bases on sqlx crate"
license = "GPL-3.0"
repository = "https://github.com/evanzp0/dysql-project"
documentation = "https://docs.rs/dysql"
readme = "../README.md"

[lib]
name = "dysql"

[dependencies]
dysql-tpl = { path = "../dysql-tpl", features = ["chrono", "uuid"] }
dysql-core = { path = "../dysql-core" }
dysql-macro = { path = "../dysql-macro"  }
serde = { version = "1", features = ["derive"] }
