[package]
name = "dysql"
version = "2.0.0"
edition = "2021"
description = "Dysql is a rust crate that do dynamic-sql query through proc-macro, it bases on sqlx crate"
license = "GPL-3.0"
repository = "https://github.com/evanzp0/dysql-project"
documentation = "https://docs.rs/dysql"
readme = "../README.md"

[lib]
name = "dysql"

[dependencies]
# dysql-tpl = { path = "../dysql-tpl" } # , version = "2.0"
# dysql-core = { path = "../dysql-core" } # version = "2.0"
# dysql-macro = { path = "../dysql-macro" } # version = "2.0"
dysql-tpl = {  version = "2" }
dysql-core = { version = "2" }
dysql-macro = { version = "2" }
serde = { version = "1", features = ["derive"] }

[features]
default = []
sqlx-postgres = ["dysql-core/sqlx-postgres", "dysql-macro/sqlx"]
sqlx-mysql = ["dysql-core/sqlx-mysql", "dysql-macro/sqlx"]
sqlx-sqlite = ["dysql-core/sqlx-sqlite", "dysql-macro/sqlx"]
tokio-postgres = ["dysql-core/tokio-postgres", "dysql-macro/tokio-postgres"]
rbatis-pg = ["dysql-core/rbatis-pg"]
rbatis-mysql = ["dysql-core/rbatis-mysql"]
rbatis-sqlite = ["dysql-core/rbatis-sqlite"]
# rbatis-mssql = ["dysql-core/rbatis-mssql"]
