[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dysql = { path = "../dysql" }
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls" , "postgres",  "mysql", "sqlite", "chrono", "uuid" ] }
