[package]
name = "tests"
version = "0.0.0"
edition = "2021"

[dependencies]
dysql = { path = "../dysql"}
dysql-macro = { path = "../dysql-macro"}
ramhorns-ext = { version = "0.17", features = ["chrono", "uuid"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "mysql", "sqlite"] }
tokio = { version = "1.0", features = ["full"] }