[package]
name = "with_tokio_postgres"
version = "0.8.3"
edition = "2021"

[dependencies]
dysql = { path = "../../dysql" }
dysql-macro = { path = "../../dysql-macro", features = ["tokio-postgres"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
ramhorns = "0.14"